@@ -4,6 +4,7 @@ upcoming
   * Patch from Federico Lucifredi: Avoid ugly NaNs in output
   * Full OS X support: msync(2) evicts pages on this system
   * HP-UX support from Shane Seymour (thanks!)
+  * Add option to wait for daemon mode to finish mlocking.
 
 0.7.3
   * Solaris support for page eviction
